1.4/Pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: multitool-pod
spec:
  containers:
    - name: multitool
      image: wbitt/network-multitool
      command: ["sleep", "infinity"]
