1.4/Nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
spec:
  type: NodePort
  selector:
    app: nginx-multitool
  ports:
    - name: nginx-http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
